import sys
from PyQt5 import uic, QtWidgets, QtGui, QtCore

class EditarWindow(QtWidgets.QDialog):
    def __init__(self):
        super(EditarWindow, self).__init__()
        uic.loadUi('ui\EDITAR.ui', self)  # Altere para o caminho correto do seu arquivo .ui

        # Conectar botões a funções
        self.pushButton_5.clicked.connect(self.salvar_edicao)
        self.pushButton_6.clicked.connect(self.cancelar_edicao)
        self.pushButton_7.clicked.connect(self.remover_produto)

        # Carregar dados iniciais na tabela
        self.carregar_tabela()

    def carregar_tabela(self):
        # Aqui você deve implementar a lógica para carregar os produtos na tabela
        pass

    def salvar_edicao(self):
        # Lógica para salvar a edição do produto
        QtWidgets.QMessageBox.information(self, "Salvar", "Produto editado com sucesso!")

    def cancelar_edicao(self):
        self.reject()  # Fecha a janela de edição

    def remover_produto(self):
        # Lógica para remover o produto selecionado
        QtWidgets.QMessageBox.information(self, "Remover", "Produto removido com sucesso!")

if __name__ == "__main__":
    app = QtWidgets.QApplication(sys.argv)
    window = EditarWindow()
    window.show()
    sys.exit(app.exec_())
